# -

./: .env.example  .gitattributes  .gitignore  A3-自进化学习多智能体系统方向设计.md  Makefile  PROGRESS.md  README.md  STARTUP.md  docker-compose.yml  pyproject.toml  一键启动.bat
deploy/: Dockerfile.api
discuss/: 2026-06-08-开发进度同步与下一阶段发展计划.md  Claude-Code-Best对标审查与ReflexLearn优化路线.md  H阶段学习闭环产品化执行计划.md  P0-前端登录与生产安全加固执行计划.md  P0-最小安全闭环执行计划.md  下一阶段学习系统产品化开发计划.md  波次2目录结构治理方案.md  登录后学习系统首页与信息架构设计方案.md  资源发现与B站搜索接入计划.md
docs/: 00-项目蓝图与里程碑.md  01-系统架构与数据流.md  02-Agent编排层详细设计.md  03-记忆与RAG详细设计.md  04-数据工程底座详细设计.md  05-LLM网关与MCP工具详细设计.md  06-评测与可观测详细设计.md  07-工程化与目录结构详细设计.md  08-评测报告与消融结果.md  09-启动与发布说明.md  10-开发进度与交接审查说明.md  11-发展路线图.md  12-阶段二任务派工书.md  13-阶段二收尾活体验证派工书.md  14-下一阶段升级蓝图.md  15-波次1任务派工书.md  16-波次2任务派工书.md  17-波次3任务派工书.md  19-性能画像与优化方案.md  20-首页功能叙事与后期页面内容梳理.md  21-AI导师学习系统产品化开发文档.md  22-产品演示链路与验收清单.md  23-产品战略审视与商业落地路线.md  24-Claude全栈接管代码审查交接.md  README.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
scripts/: _lib.sh  build_frontend.sh  check_api.sh  check_api_integrations.sh  check_api_security.sh  check_bigdata.sh  check_chat_perf.sh  check_frontend_glass.sh  check_frontend_ia.sh  check_llm.sh  check_lora_export.sh  check_metacognition_perf.sh  check_mistake_flywheel.sh  check_observe.sh  check_profile_page.sh  check_today_page.sh  check_wave2_api.sh  check_wave2_live.sh  check_wave3_preflight.sh  clean_frontend.sh  ingest_graph.py  ingest_knowledge.py  init_all.sh  init_db.py  init_qdrant.py  kafka_consumer.py  migrate_db.sh  run_clean.py  (+22 more)
(+481 files in other folders)
